--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactor-scheduler-pro",
+  "name": "reactor-schedule",
   "private": true,
   "version": "0.0.0",
   "type": "module",
